adding icons for garden and tweaking copy

--- a/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
+++ b/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
@@ -2,6 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: Be the change you wish to see in yourself
 description: How to set goals and achieve them
+stage: essay
 lastEdited: 09.09.2022
 tags: ["self-improvement"]
 ---
@@ -16,4 +17,4 @@ Do you hit the snooze button?
 
 No. You are a runner. Runners don't hit snooze.
 
-Think about who you need to be and what behaviours you need to model.
+Think about who you want to be and what behaviours you need to model.
