--- a/src/pages/thoughts/how-to-create-the-perfect-post.mdx
+++ b/src/pages/thoughts/how-to-create-the-perfect-post.mdx
@@ -2,6 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: How to create the perfect post
 description: How to turn insight into a social media post
+stage: note
 lastEdited: 1.09.2022
 tags: ["writing"]
 ---
