--- a/src/pages/thoughts/making-the-most-of-observations.mdx
+++ b/src/pages/thoughts/making-the-most-of-observations.mdx
@@ -2,6 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: Making the most of observations
 description: Where to find inspiration for notes
+stage: note
 lastEdited: 31.08.2022
 tags: ["writing"]
 ---
