--- a/src/pages/thoughts/metacognition.mdx
+++ b/src/pages/thoughts/metacognition.mdx
@@ -2,6 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: Metacognition, learning and me
 description: Thinking about thinking and learning
+stage: essay
 lastEdited: 29.10.2022
 tags: ["self-improvement"]
 ---
@@ -20,13 +21,13 @@ Metacognition is really the act of observing and reflecting on thoughts. It's ti
 
 ### Focussed and diffuse model
 
-Our brains have two modes. Daniel Kahneman calls these system one and two in his book, Thinking Fast and Slow. I prefer the descriptions, focussed and diffuse.
+Our brains have two modes, focussed and diffuse.
 
 The focussed mode uses your working memory to complete a task - it may shut down other parts of the brain to get things done (like long multiplication).
 
 The diffuse mode - is your brain at rest. The diffuse mode only gets switched on when your brain is relaxed so try taking a nap, going for a walk, taking a shower etc.
 
-Switching between being focussed and a more relaxed diffuse mode is a great way to learn. The diffuse mode of thinking allows you to form new neural pathways.
+Switching to the more relaxed diffuse mode is a great way to learn as our diffuse mode of thinking allows us to form new neural pathways.
 
 ### Sleep
 
@@ -34,7 +35,7 @@ Sleep is an important part of the memory and learning process.
 
 During sleep, your brain rehearses whatever you're trying to learn, strengthening neural patterns. The complete shut down of the prefrontal cortex (your conscious self) helps other areas of your brain deepen connections.
 
-If you revise what you're learning right before you take a nap or go to sleep, you have an increased chance of dreaming about it. Dreaming about what you're studying can substantially enhance your ability to understand — you consolidate your memories into easier to grasp chunks.
+If you revise what you're learning right before you take a nap or go to sleep, you have an increased chance of dreaming about it. Dreaming about what you're studying can substantially enhance your ability to understand — you consolidate your memories into easier-to-grasp chunks.
 
 ### Chunking
 
@@ -42,11 +43,10 @@ Chunking helps your brain run more efficiently. Once you chunk an idea, a concep
 
 A conceptual chunk consists of mental leaps that unite scattered bits of information through meaning. Concentrate on the links between the information.
 
-- focus your undivided attention on the information you want to chunk
-- understand the basic idea you are trying to chunk
-- test yourself on whether you've understood it - use recall to see what you can remember, the retrieval process itself enhances deep learning,
-- gain context so you can see not just how but also when to use this chunk.
-- go beyond the initial problem and look more broadly - note the headings of a book passage before diving in to the detail,
+- focus your undivided attention on the information you want to chunk,
+- understand the basic idea you are trying to chunk,
+- test yourself on whether you've understood it - use recall to see what you can remember — the retrieval process itself enhances deep learning,
+- gain context so you can see not just how but also when to use this chunk. Explore beyond the initial problem and look more broadly - note the headings of a book passage before diving in to the detail,
 - repeat and practice with both related and unrelated problems, so that you can see not only when to use the chunk but when not to use it.
 
 Ultimately, practice helps you broaden the networks of neurons that are connected to your chunk
@@ -55,13 +55,13 @@ Ultimately, practice helps you broaden the networks of neurons that are connecte
 
 Retrieval practice is the best approach to learning. You are essentially practicing remembering. Each time you retrieve these ideas from your memory, you're strengthening the links between neurons.
 
-Our brains learn by repetition, not cramming. Use the pomodoro method to intensely focus on learning something. Then take a break. Our brains use the diffuse mode to build new connections.
+Our brains learn by repetition, not cramming. Use the pomodoro method to intensely focus on learning something. Then take a break. Our brains use the diffuse mode to build new connections. Test yourself and repeat.
 
 ### Practice makes perfect using spaced repetition
 
 Our working memory can hold four items of information, we chunk information into these four pots that we can access. We may need to repeat this information to ourselves to get the information to stick in the pots.
 
-Practicing using spaced repetition is used to transfer working memory to long term memory. Hand-writing and saying what you've learned seems to enhance retention.
+Practicing using spaced repetition transfers working memory to long term memory. Writing things out by hand and saying out loud what you're learning seems to enhance retention.
 
 ### Interleaving
 
