--- a/src/pages/thoughts/procrastination.mdx
+++ b/src/pages/thoughts/procrastination.mdx
@@ -1,7 +1,8 @@
 ---
 layout: ../../layouts/Layout.astro
 title: A technique for overcoming procrastination
-description: And why we prioritise something else other than what you are supposed to
+description: And why we prioritise other things instead
+stage: essay
 lastEdited: 01.11.2022
 tags: ["self-improvement"]
 ---
@@ -23,4 +24,12 @@ By changing your reaction to cues that trigger the habit of procrastination, you
 
 One tool for thinking differently about tasks is to concentrate less on the product of the task (as this is causing the anxiety that your brain is trying to avoid) but instead concentrate on the process of carrying out the task. The process relates to the flow of time and the actions associated with that flow of time.
 
-By thinking about the process of carrying out work: setting a pomodoro timer, elimating distractions and concentrating for 25 minutes, rather than the product of the task, your goal changes to something more manageable.
+By thinking about the process of carrying out work, rather than the product of the task, your goal changes to something more manageable.
+
+Here's a process to get started:
+
+- elimate distractions,
+- put some music on,
+- set a pomodoro timer for 25 minutes,
+- concentrate,
+- when the timer is up, take a break.
