--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -2,9 +2,14 @@
 layout: ../../layouts/Layout.astro
 title: Taking notes to the next level
 description: Using a digital garden for cultivating wisdom
+stage: reflection
 lastEdited: 08.09.2022
 tags: ["writing"]
 ---
+
+import Acorn from "../../components/Acorn.astro";
+import Sapling from "../../components/Sapling.astro";
+import Tree from "../../components/Tree.astro";
 
 I love the internet. Each time I unearth a nugget of information, my brain lights up.
 
@@ -22,7 +27,7 @@ But why are these notes so useful?
 
 ## A wiser way of working
 
-Note taking becomes more powerful if we reflect on what we learn.
+Note taking becomes more powerful when we reflect on what we learn.
 
 Information is merely refined data. Knowledge, on the other hand, comes from awareness and understanding based on our own experiences.
 
@@ -34,23 +39,28 @@ So, here's my plan to remember and act on new information.
 
 ## Create a digital garden
 
-As opposed to a blog, which is typically a reverse-chronological list of published articles, I'm creating a digital garden.
+As opposed to a blog, which is typically a reverse-chronological list of published articles, I've created this digital garden.
 
 A digital garden is a bunch of interconnected notes and essays.
 
 Each time I find something interesting on the internet, I will plant my notes as seeds in my digital garden.
 
+<Acorn />
+
 Now, this can be a one-off action. After all, not all seeds germinate and lie dormant. But I can return to my garden to cultivate, tend to and iterate on the ideas. Notes can be nutured into more rounded reflective essays over time.
 
-<a href="./metacognition">Using spaced repetition</a> is a great way to remember
-what you learn after all.
+Revisiting the material in this way, <a href="./metacognition">using spaced repetition</a>, helps us to retain and recall the information.
 
 ## Returning to tend to the garden
 
 Explaining core ideas and how they relate to each other in plain language so that others can understand them is a great way to make sure that one truly understands a subject.
 
+<Sapling />
+
 By regularly returning to edit and iterate notes into <a href="./how-to-create-the-perfect-post">useful documents for others</a>, ideas can be strengthened and knowledge re-enforced.
 
-Publishing essays and asking for feedback, cross-pollinates ideas with the community. Articles can be revised and refined further overtime. Content becomes evergreen and matures into well-structured prose.
+Publishing essays and asking for feedback cross-pollinates ideas. Articles can be revised and refined further overtime. Content becomes evergreen and matures into well-structured thoughts and prose.
+
+<Tree />
 
 Because ideas are reflected and iterated on, information is not only retained but new mental models are created and can be applied to future decisions. This wisdom is the bounty I hope to harvest.
