--- a/src/pages/thoughts/lean-and-mean-prototyping.mdx
+++ b/src/pages/thoughts/lean-and-mean-prototyping.mdx
@@ -2,6 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: Lean and mean prototyping
 description: How and why I advocate lean ux and building to learn
+stage: note
 lastEdited: 16.09.2022
 tags: ["ux", "prototyping", "storytelling"]
 ---
