--- a/src/pages/thoughts/teamwork-makes-the-dream-work.mdx
+++ b/src/pages/thoughts/teamwork-makes-the-dream-work.mdx
@@ -2,6 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: Teamwork makes the dream work
 description: Notes on high-performing teams
+stage: note
 lastEdited: 19.09.2022
 tags: ["teamwork", "innovation"]
 draft: true
