adding a read more component

--- a/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
+++ b/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
@@ -4,8 +4,10 @@ title: Be the change you wish to see in yourself
 description: How to set goals and achieve them
 stage: essay
 lastEdited: 09.09.2022
-tags: ["self-improvement"]
+theme: "self-improvement"
 ---
+
+import ReadMore from "../../components/ReadMore.astro";
 
 If you are going to set a goal, you first need to think: "who do I need to be to achieve that goal"?
 
@@ -18,3 +20,5 @@ Do you hit the snooze button?
 No. You are a runner. Runners don't hit snooze.
 
 Think about who you want to be and what behaviours you need to model.
+
+<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
