--- a/src/pages/thoughts/lean-and-mean-prototyping.mdx
+++ b/src/pages/thoughts/lean-and-mean-prototyping.mdx
@@ -4,9 +4,14 @@ title: Lean and mean prototyping
 description: How and why I advocate lean ux and building to learn
 stage: note
 lastEdited: 16.09.2022
-tags: ["ux", "prototyping", "storytelling"]
+theme: "innovation"
+draft: true
 ---
+
+import ReadMore from "../../components/ReadMore.astro";
 
 Creating a prototype is story.
 
 Code only the interactions needed to support the scenario.
+
+<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
