--- a/src/pages/thoughts/metacognition.mdx
+++ b/src/pages/thoughts/metacognition.mdx
@@ -4,8 +4,10 @@ title: Metacognition, learning and me
 description: Thinking about thinking and learning
 stage: essay
 lastEdited: 29.10.2022
-tags: ["self-improvement"]
+theme: "self-improvement"
 ---
+
+import ReadMore from "../../components/ReadMore.astro";
 
 After writing about using the act of writing and rewriting using spaced repetition to [take my notes to the next level](./taking-notes-to-the-next-level), I became interested in how we learn, think and problem solve.
 
@@ -125,3 +127,5 @@ After completing the task, ask:
 
 - How well did you perform?
 - How did the strategies work out?
+
+<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
