--- a/src/pages/thoughts/teamwork-makes-the-dream-work.mdx
+++ b/src/pages/thoughts/teamwork-makes-the-dream-work.mdx
@@ -4,9 +4,11 @@ title: Teamwork makes the dream work
 description: Notes on high-performing teams
 stage: note
 lastEdited: 19.09.2022
-tags: ["teamwork", "innovation"]
+theme: "innovation"
 draft: true
 ---
+
+import ReadMore from "../../components/ReadMore.astro";
 
 Research has shown that employees with close connections at work are more productive, creative, and collaborative.
 
