--- a/src/pages/thoughts/making-the-most-of-observations.mdx
+++ b/src/pages/thoughts/making-the-most-of-observations.mdx
@@ -4,11 +4,15 @@ title: Making the most of observations
 description: Where to find inspiration for notes
 stage: note
 lastEdited: 31.08.2022
-tags: ["writing"]
+theme: "self-improvement"
 ---
+
+import ReadMore from "../../components/ReadMore.astro";
 
 - What have you heard/read/talked about today?
 - What does that mean?
 - What observations can you make notes on?
 - What insight can you find in that observation?
 - <a href="./how-to-create-the-perfect-post">Turn insights into posts</a>
+
+<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
