--- a/src/pages/thoughts/procrastination.mdx
+++ b/src/pages/thoughts/procrastination.mdx
@@ -4,8 +4,10 @@ title: A technique for overcoming procrastination
 description: And why we prioritise other things instead
 stage: essay
 lastEdited: 01.11.2022
-tags: ["self-improvement"]
+theme: "self-improvement"
 ---
+
+import ReadMore from "../../components/ReadMore.astro";
 
 Procrastination is a habitual tendency to delay a task you planned to do. How often do you come up with an excuse to avoid what you have to do and carry out an activity which makes you feel better instead?
 
@@ -33,3 +35,5 @@ Here's a process to get started:
 - set a pomodoro timer for 25 minutes,
 - concentrate,
 - when the timer is up, take a break.
+
+<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
