--- a/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
+++ b/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
@@ -11,7 +11,7 @@ import ReadMore from "../../components/ReadMore.astro";
 
 If you are going to set a goal, you first need to think: "who do I need to be to achieve that goal"?
 
-Change your identity — if you want to run a marathon, you need to embrace the identity of a runner.
+If you want to run a marathon, you need to embrace the identity of a runner.
 
 It's Monday morning at 5:30am, the alarm goes off. It's still dark and you can hear the rain against your bedroom window.
 
