--- a/src/pages/thoughts/procrastination.mdx
+++ b/src/pages/thoughts/procrastination.mdx
@@ -3,26 +3,36 @@ layout: ../../layouts/Layout.astro
 title: A technique for overcoming procrastination
 description: And why we prioritise other things instead
 stage: essay
-lastEdited: 01.11.2022
+lastEdited: 22.12.2022
 theme: "self-improvement"
 ---
 
 import ReadMore from "../../components/ReadMore.astro";
 
-Procrastination is a habitual tendency to delay a task you planned to do. How often do you come up with an excuse to avoid what you have to do and carry out an activity which makes you feel better instead?
+Procrastination is a habitual tendency to delay a task you planned to do. How often do you come up with an excuse to avoid what you have to do, and instead, end up doing something else that makes you feel better?
 
-Procrastination is a habit. And if you want to tackle procrastination, you need to understand how habits work:
+We need to recognise that procrastination is deeply connected with our emotions. It's an avoidance strategy that acts as a short-term mood repair. When we procrastinate, we get temporary relief from facing an aversive task.
+
+Procrastination is also a habit. And if you want to tackle procrastination, you need to understand how habits work:
 
 1. The cue — a trigger that sets your brain off on an automated response.
 2. The routine — a habitual response that your brain makes when triggered by the cue.
 3. The reward — every habit develops because the brain gives us a feeling of pleasure. To change a bad habit, you need to develop alternative rewards.
-4. Belief — our fundamental beliefs also power habits. To change habits you need to change your view of them.
 
-By changing your reaction to cues that trigger the habit of procrastination, you can override a habit.
+By changing your reaction to the cues that trigger your habit of procrastination, you can start working on the things that matter:
 
-- recognise the cues
-- develop new responses (changing your location can help)
-- reward the new behaviour (be consistent)
+- Recognise the cues: where are you when this happens? what time of day is it? Try <a href="./interstitial-journalling">interstitial journalling</a> to help track this,
+- Develop new responses to those cues, change your environment, eliminate those distractions.
+- Reward the new behaviour — be consistent
+
+Write out your strategy as an Implementation Intention:
+
+- Given _X_ (I am in this environment)
+- When I _Y_ (start this task, notice this thing),
+- Then I will _Z_ (respond in this new way),
+- And when I'm successful, I will _Ω_ (reward myself)
+
+If you find yourself procrastinating, take some time to explore why. Journalling helps you structure your thoughts. Becoming aware of your feelings is the first step to accepting them.
 
 One tool for thinking differently about tasks is to concentrate less on the product of the task (as this is causing the anxiety that your brain is trying to avoid) but instead concentrate on the process of carrying out the task. The process relates to the flow of time and the actions associated with that flow of time.
 
@@ -33,7 +43,7 @@ Here's a process to get started:
 - elimate distractions,
 - put some music on,
 - set a pomodoro timer for 25 minutes,
-- concentrate,
+- concentrate on the next task (if the task is overwhelmingly large, break it up into smaller chunks - making progress gives you an emotional boost),
 - when the timer is up, take a break.
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
