--- a/src/pages/thoughts/how-to-write-articles.mdx
+++ b/src/pages/thoughts/how-to-write-articles.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: How to write articles
 description: A process for writing more structured content
-stage: essay
+stage: note
 lastEdited: 8.09.2022
 theme: "self-promotion"
 ---
