--- a/src/pages/thoughts/technical-discovery-canvas.mdx
+++ b/src/pages/thoughts/technical-discovery-canvas.mdx
@@ -10,30 +10,115 @@ draft: true
 
 I created a canvas to help teams chose what technology is right for their projects. I came across this process working with Andy Brace, a technical architect, on GDS projects and have adapted some of the ideas...
 
-## Introduction
+When I was assigned my first Technical Lead role working on a project helping Women's Aid create an Instant Messaging service that allowed them to discretely and securely support survivors of domestic abuse whilst capturing data for their funders, I acutely knew the importance of choosing the right technology.
 
-We create value by solving people's problems. If we create products to serve people's needs, then they will use them.
+So, I reached for this tool - a Technical Discovery - which I'd learned from working with Technical Architects on projects for the Scottish Environment Protection Agency and the Department for International Trade.
 
 **A Technical Discovery is a process that can de-risk investment in technology.**
 
-We explore the problem to make sure
-**we build the right thing...
+We create value for customers by solving their problems. If we create products to serve user needs, then people will use them.
+
+Alongside *understanding* the needs of the customer, we need to *uncover* how technology can *underpin* and meet those needs.
+
+We explore the problem space to make sure
+we know what the right thing is to build
 before we build the thing right**.
 
+In preparation for this talk, I've created a Technical Discovery Canvas or Blueprint.
+
 It's formed of ten basic building blocks in a pre-structured canvas
-that helps teams draw out, discuss, and discover
+that helps teams draw out, discuss, and discover technology choices
 with user needs and desired business outcomes at their core.
+
+I'm going to go through each of them.
 
 You start with...
 
-When you start a project, reframe it as a problem to be solved.
+### 1. Problem definition.
+
+When you start a project, reframe it as a problem to be solved. 
+
+Build a shared understanding of the problem. Break down your assumptions and ask lots of questions. Reframing the problem also includes agreeing what is and isn't part of the project.
+
+As a team, ask yourselves...
+* Why are we doing this?
+* What do we do now and why?
+* What critical things are we assuming?
+* How will we know if we're successful?
+* Who are our stakeholders?
+* Who else needs to be consulted or kept informed?
+
+This will help you *better* understand what your team has been set up to achieve.
+
+The *better* you define the problem, the *better* the solution.
 
 ### 2. Business outcomes and measurement
 
-Measuring what's happening now can help you to understand how much the problem is currently costing.
+How will you prove that you've been successful?
+
+You need to think about:
+-   what data you’ll collect to measure performance
+-   what performance metrics you’ll use to know that your solution is working for users.
+
+Also, ask your stakeholders what success looks like for them.
+
+Measure what's happening now so you begin to understand how much the problem is currently costing.
+
+### 3. Users and their needs
+
+This is where good collaboration with user experience research and designers comes in. Team work really does makes the dream work. 
 
 Check out Dovetail for the rich insight from our user research and cusomer feedback, and ensure a UX consultant is part of the team. Without good knowledge of user needs, we are building on a bed of sand.
 
-By having a good understanding of what types of users and customers we should focus on, we ensure that we are creating experiences our customers value. It's a solid foundation for production.
+By understanding what types of users and customers we should focus on, we ensure we are focussed on creating experiences they will value.
 
+### 4. User outcomes and benefits
+As a team, ask what the user is trying to accomplish. How will they think and feel during and after this process? What behaviours will they change as a result?
+
+We need to know how our users are motivated otherwise we don't know how we can help them create the impact they desire.
+
+### 5. User activities (journey)
+What are the activities that the user will do to complete their goal?
+
+As a team, map out those activities in a journey. For an ecommerce scenario (like buying Bluetooth speakers), the stages can be discover, compare, buy, use, seek support.
+
+This may help identify opportunities for improvement and highlight where user painpoints are. 
+
+### 6. Capabilities, resources and data
+Then we look at what capabilities, resources and data we need to provide to support the user to carry out those activities.
+
+In our ecommerce example, we'll need to think about listing products and making them discoverable, taking product photos, employing copywriters, and support staff, handling card tokens and analytics.
+
+### 7. The types of technology that could support the user journey
+Without solutionising, we think about what types of technology, systems and tools are required to support those user activities.
+
+Breaking this down in this way helps us compile a shopping list of tech that we know will support the user journey.
+
+### 8. Selection criteria
+As a team, define some criteria from the user needs, and business requirements that will help you evaluate the technology.
+
+Examples of criteria are afforability, maintainability, interoperability, scalability and so on.
+
+### 9. Technical exploration and assessment
+With your shopping list of technology types, start exploring potential services and tools that will provide the capabilities needed to serve your users journey.
+
+Create a matrix and score each option against each of your criteria. You may want to give a weighting to the principles that are a priority to your project.
+
+### 10. Candidate solution
 Create a candidate solution, a technical architecture, from your highest scoring technologies. This will form a hypothesis about the technologies you believe can work together to help solve the identified problem.
+
+Write it out as a statement:
+* we believe we will achieve *this business outcome*,
+* if *these users*,
+* attain *this benefit*,
+* with *this solution*.
+
+With your candidate solution you can conduct experiments to validate its viability.
+
+You might want to create a proof-of-concept to show that the suite of technology chosen does work together.  Or a coded-prototype to test with users to see if it does actually produce the behaviours you intended.
+
+Always think about the *least amount of work* you need to do *to learn the next most important thing*.
+
+A technical discovery and subsequent hypothesis validation will de-risk investment in technology.
+
+It's a great way to set-up initiatives with strong foundations so that we assemble technology in a way that provides users and customers with what they need, value and potentially love.
