updating interstitial journaling article

--- a/src/pages/thoughts/interstitial-journalling.mdx
+++ b/src/pages/thoughts/interstitial-journalling.mdx
@@ -2,40 +2,41 @@
 layout: ../../layouts/Layout.astro
 title: Interstitial journalling
 description: Mindfully journalling throughout the day
-stage: note
-lastEdited: 22.12.2022
+stage: essay
+lastEdited: 15.1.2023
 theme: "self-improvement"
 ---
 
 import ReadMore from "../../components/ReadMore.astro";
 
-I'd started doing a weekly journal at the end of the working week to help me reflect on events. It's helped me to this about how I might do things differently and learn from what's occurred - I'd say it's been helpful but it has a couple of issues.
+I've been writing a weekly reflection at the end of the working week which helps me structure my thoughts about what things have and gone well and how I might do things differently.
 
-First of all, Friday afternoons I'm not in the best frame of mind. I timebox the exercise to add some urgency but I can be quite tired from the week and sometimes, I'm trying to finish some work by the end of the day.
+At times it has been useful, however, I'm not always in the best frame of mind on Friday afternoon. Although I timebox the exercise to add some urgency, I can be quite tired, and sometimes, I just need to prioritise finishing off a piece of work before the weekend.
 
-Secondly, I've started to just journal as and when I need to clarify my thinking.
+I've recently started to journal as and when I need to clarify my thinking as events occur — rather than wait to the end of the week. So when I stumbled across an <a href="https://betterhumans.pub/replace-your-to-do-list-with-interstitial-journaling-to-increase-productivity-4e43109d15ef">article on Interstitial Journalling by
+Tony Stubblebine</a>, I could immediately recognise the benefits of this approach. Tony sells it as a "new journaling tactic that immediately kills procrastination and boosts creative insights".
 
-I stumbled across an <a href="https://betterhumans.pub/replace-your-to-do-list-with-interstitial-journaling-to-increase-productivity-4e43109d15ef">article on Interstitial Journalling by
-Tony Stubblebine</a> and I can really see the benefits of this approach. Tony sells it as a "new journaling tactic that immediately kills procrastination and boosts creative insights".
+The main idea behing Interstitial Journalling is that between each task, you take a little time to pause and reflect on what's just happened and what you are about to do.  Rather than a lengthy braindump, it's a micro-journal of events throughout the day.
 
----
+When we transition between projects or tasks, we continue to think about what we've just been working on. By writing down some salient points about what's just happened, we can gain some closure which helps us concentrate on the next task.
 
-- there's a really nice tie in with the pomodoro method and <a href="./metacognition#keep-a-learning-journal">learning journal</a>
-- when we transition between projects or tasks, we continue to think about what we've just been working on. Some closure helps us concentrate on the next task
+As well as emptying our minds of the last project, this also gives us the mental space to think strategically about our next project.
+
+So, here's the process:
 - Journal about what you just did - it should be a few sentences, and then journal about your next task.
 - jot down anything else that comes to mind so as to reduce your cognitive load.
-- as well as emptying our minds of the last project, this also gives us the mental space to think strategically about our next project
-- you can write your next tasks as a mini to-do-list to help structure your thinking
-- when thoughts or ideas do pop into your head, you can note them down in your journal, tag them so you can easily return later, and then carry on with the task in hand
-- you could start your day with a check-in, asking yourself how you feel, what are your fears for the day and what you are looking forward to and bullet-pointing the answers
-- Journaling as you work produces mindfulness about your context, goals, mood, and skills
+- write your next tasks as a mini to-do-list to help structure your thinking
+- when thoughts or ideas do pop into your head, you can note them down in your journal, tag them so you can easily return later, and then carry on with the task in hand.
+- also note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for.
 
----
+You can also start your day with a check-in, asking yourself how you feel, what are your fears for the day and what you are looking forward to and bullet-pointing the answers
 
-<a href="./procrastination">Procrastination</a> is often a short term mood repair
-initiated by your subconscious. Having a journal gives you a habitual response to
-noticing your procrastination.
+I've found journaling as I work, produces mindfulness about the context, my goals, mood, and skills. I've been using Obsidian to write this journal. Obsidian allows you to add tags, so you can create automatic links to other notes, and templates so you can add in custom checklists.
 
-Take a note of the time, what you felt the trigger was, what you did and how long you were lost for.
+Each time I start a new section of work, I fire up my focus checklist which reminds me to:
+- turn off notifications,
+- hide any windows that may cause distraction,
+- play some focus music/sounds,
+- set a pomodoro timer
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
